# martian-swiftlogics

./: .gitignore  API_Flow.md  Implementations.md  README.md
ClientPortal/: readme.md
ClientPortal/client-portal/: package-lock.json  package.json  tailwind.config.js
ClientPortal/client-portal/src/: App.tsx  index.css
ClientPortal/client-portal/src/hooks/: useAuth.ts
ClientPortal/client-portal/src/pages/: Dashboard.tsx  OrderTracking.tsx  SubmitOrder.tsx  signIn.tsx  signUp.tsx
DriverApp/: readme.md
DriverApp/DriverApp/: app.json  package-lock.json  package.json
DriverApp/DriverApp/app/(tabs)/: _layout.tsx  delivery-updates.tsx  manifest.tsx  proof-of-delivery.tsx  route.tsx
DriverApp/DriverApp/assets/: manifest.json
DriverApp/DriverApp/components/ui/: IconSymbol.tsx
ExternalSystems/CMS/: implementation_guide.md
ExternalSystems/WMS/: start_docker.sh
ExternalSystems/WMS/mock-wms/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
ExternalSystems/WMS/mock-wms/src/: main.rs
ROS/: implementation_guide.md
Services/: billing-service.md  inventory-service.md  shipment-service.md
Services/Client/: pom.xml  readme.md
Services/Client/src/main/java/com/martian/clientms/: ClientMsApplication.java
Services/Client/src/main/java/com/martian/clientms/config/: DatabaseConnectionChecker.java  (+1 more)
Services/Client/src/main/resources/: application.properties
Services/Driver/: readme.md
Services/Order/: pom.xml  readme.md
Services/Order/src/main/resources/: application.yml
WMS/: implementation_guide.md
micro-integrator/: pom.xml
(+10 files in other folders)
