[package]
name = "mock-wms"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "time",
] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
axum = "0.7" # For REST API endpoints
